feat: Update theme from purple to blue.

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,20 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.blue-dark-gradient {
+  background: #00143a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #00143a,
+    #000D26
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #00143a,
+    #000D26
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .violet-gradient {
   background: #804dee;
   background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
@@ -57,10 +71,26 @@
   );
 }
 
+.blue-gradient {
+  background: #804dee;
+  background: linear-gradient(-90deg, #0088FF 0%, rgba(51, 64, 80, 0) 100%);
+  background: -webkit-linear-gradient(
+    -90deg,
+    #0088FF 0%,
+    rgba(51, 64, 80, 0) 100%
+  );
+}
+
 .green-pink-gradient {
   background: "#00cea8";
   background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+}
+
+.green-blue-gradient {
+  background: "#00cea8";
+  background: linear-gradient(90.13deg, #00cea8 1.9%, #0088FF 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #0088FF 97.5%);
 }
 
 .orange-text-gradient {
