feat: Create UserContext and decode access token to retrieve data of signed in user.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,13 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/*  The entire application will be inside the below class
+/*  The entire home page will be inside the below class
     - On mobile devices; often the browser will hide the browser navigation menu.
     - This feature causes the viewport's height to constantly change when the user scrolls.
     - I found that the Technologies Items would jitter whenever the viewport changed.
     - The settings below alleviate this problem.
 */
-.App {
+.home {
   height: 100vh;
   height: 100dvh;
   width: 100vw;
