feat: Create Modal Higher Order Component. Add new Form component inside of Modal.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,25 @@
   overflow-y: auto;
 }
 
+.modal {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(3px);
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 30;
+}
+
+.modal > div, .modal > div > * { border-radius: 1rem; }
+
 * {
   margin: 0;
   padding: 0;
