--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@
 .modal {
   height: 100vh;
   width: 100vw;
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   top: 0;
   bottom: 0;
