feat: Create/style a custom image upload button.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,10 @@
   overflow-y: auto;
 }
 
+#file-upload-button, ::-webkit-file-upload-button {
+  cursor: pointer!important;
+}
+
 .modal {
   height: 100vh;
   width: 100vw;
@@ -125,6 +129,12 @@
   background: "#00cea8";
   background: linear-gradient(90.13deg, #00cea8 1.9%, #0088FF 97.5%);
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #0088FF 97.5%);
+}
+
+.green-blue-gradient--hover {
+  background: "#007eec";
+  background: linear-gradient(90.13deg, #00c39f 1.9%, #007eec 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00c39f 1.9%, #007eec 97.5%);
 }
 
 .orange-text-gradient {
