feat: A user that is signed in can delete their learning experiences.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,6 +135,19 @@
   background: -webkit-linear-gradient(-90.13deg, #00c39f 1.9%, #007eec 97.5%);
 }
 
+.white-grey-gradient {
+  background: "#f4f4f4";
+  background: linear-gradient(90.13deg, #f4f4f4 1.9%, #a8a8a8 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #f4f4f4 1.9%, #a8a8a8 97.5%);
+}
+
+.white-grey-gradient--hover {
+  background: "#dadada";
+  background: linear-gradient(90.13deg, #dadada 1.9%, #8a8a8a 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #dadada 1.9%, #8a8a8a 97.5%);
+}
+
+
 .orange-text-gradient {
   background: #f12711; /* fallback for old browsers */
   background: -webkit-linear-gradient(
