--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,38 @@
   z-index: 30;
 }
 
+.hamburger div {
+  /* position: relative; */
+  width: 3rem;
+  height: 0.275rem;
+  border-radius: 3px;
+  background-color: white;
+  margin-top: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover div, .active.hamburger div {
+  background-color: #A6B6C3;
+}
+
+.active.hamburger .top-bun {
+  transform: rotate(-45deg);
+  margin-top: 25px;
+}
+.active.hamburger .bottom-bun {
+  opacity: 0;
+  transform: rotate(45deg);
+}
+.active.hamburger .meat {
+  transform: rotate(45deg);
+  margin-top: -0.275rem;
+}
+
+.active.hamburger + nav {
+  top: 0;
+  transform: scale(1);
+}
+
 * {
   margin: 0;
   padding: 0;
