feat: Create a "Flash Alert" system that can store alerts as a string of component in an array. - Capped to five alerts on the screen at any one time. - The duration and type can be set for each alert. - Alerts can either be deleted manually, or auto-delete after X amount of time at the top of the stack.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@
     - I found that the Technologies Items would jitter whenever the viewport changed.
     - The settings below alleviate this problem.
 */
-.home {
+.app {
   height: 100vh;
   height: 100dvh;
   width: 100vw;
