--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,13 +25,13 @@
 
 .modal {
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
+  width: 100dvw;
   position: fixed;
   overflow: hidden;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
