--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,31 @@
   60% {background-position: center}
 }
 
+:root {
+  --swiper-pagination-color: var(--swiper-theme-color);
+  --swiper-pagination-color: #0088FF;
+  --swiper-pagination-bullet-size: 0.75rem;
+  --swiper-pagination-bullet-width: 0.75rem;
+  --swiper-pagination-bullet-height: 0.75rem;
+  --swiper-pagination-bullet-inactive-color: #0088FF;
+  --swiper-pagination-bullet-inactive-opacity: 0.2;
+  --swiper-pagination-bullet-opacity: 1;
+  --swiper-pagination-bullet-horizontal-gap: 4px;
+  --swiper-pagination-bullet-vertical-gap: 6px;
+}
+
+  
+  .swiper-pagination-bullets {
+    top: 1.5rem !important;
+    left: 50% !important;
+    transform: translateX(-50%);
+    bottom: var(--swiper-pagination-bottom, auto) !important;
+    width: fit-content !important;
+    padding: 0 1rem;
+    background: #000d26;
+    background: linear-gradient(90deg, rgba(0,13,38,0) 0%, rgba(0,13,38,0.5028952205882353) 5%, rgba(0,13,38,1) 10%, rgba(0,13,38,1) 90%, rgba(0,13,38,0.4999540441176471) 95%, rgba(0,13,38,0) 100%);
+  }
+
 .modal {
   height: 100vh;
   height: 100dvh;
