--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,16 +66,35 @@
 }
 
   
-  .swiper-pagination-bullets {
-    top: 1.5rem !important;
-    left: 50% !important;
-    transform: translateX(-50%);
-    bottom: var(--swiper-pagination-bottom, auto) !important;
-    width: fit-content !important;
-    padding: 0 1rem;
-    background: #000d26;
-    background: linear-gradient(90deg, rgba(0,13,38,0) 0%, rgba(0,13,38,0.5028952205882353) 5%, rgba(0,13,38,1) 10%, rgba(0,13,38,1) 90%, rgba(0,13,38,0.4999540441176471) 95%, rgba(0,13,38,0) 100%);
-  }
+.swiper-pagination-bullets {
+  top: 0.25rem !important;
+  left: 50% !important;
+  z-index: 40;
+  transform: translateX(-50%);
+  bottom: var(--swiper-pagination-bottom, auto) !important;
+  width: fit-content !important;
+  padding: 0 1rem;
+  background: #000d26;
+  background: linear-gradient(90deg, rgba(0,13,38,0) 0%, rgba(0,13,38,0.5028952205882353) 5%, rgba(0,13,38,1) 10%, rgba(0,13,38,1) 90%, rgba(0,13,38,0.4999540441176471) 95%, rgba(0,13,38,0) 100%);
+}
+
+.hero-gradient {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  z-index: 5;
+  right: 0;
+  bottom: -5rem;
+  left: 0;
+  height: 200px;
+  background: url(data:image/svg+xml;base64,hero-gradient);
+  background: -moz-linear-gradient(top rgba(0, 15, 38, 0) 0%, rgba(0, 15, 38, 1) 70%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 15, 38, 0)), color-stop(70%, rgba(0, 15, 38, 1)));
+  background: -webkit-linear-gradient(top, rgba(0, 15, 38, 0) 0%, rgba(0, 15, 38, 1) 70%);
+  background: -o-linear-gradient(top, rgba(0, 15, 38, 0) 0%, rgba(0, 15, 38, 1) 70%);
+  background: -ms-linear-gradient(top, rgba(0, 15, 38, 0) 0%, rgba(0, 15, 38, 1) 70%);
+  background: linear-gradient(to bottom, rgba(0, 15, 38, 0) 0%, rgba(0, 15, 38, 1) 70%);
+}
 
 .modal {
   height: 100vh;
