--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@
   width: 100dvw;
   position: fixed;
   overflow-y: auto;
+  background-color: #000F26;
 }
 
 .footer {
@@ -67,15 +68,36 @@
 
   
 .swiper-pagination-bullets {
-  top: 0.25rem !important;
+  top: 0.75em !important;
   left: 50% !important;
   z-index: 40;
   transform: translateX(-50%);
   bottom: var(--swiper-pagination-bottom, auto) !important;
   width: fit-content !important;
   padding: 0 1rem;
-  background: #000d26;
-  background: linear-gradient(90deg, rgba(0,13,38,0) 0%, rgba(0,13,38,0.5028952205882353) 5%, rgba(0,13,38,1) 10%, rgba(0,13,38,1) 90%, rgba(0,13,38,0.4999540441176471) 95%, rgba(0,13,38,0) 100%);
+}
+
+@media only screen and (max-width: 768px) {
+  .swiper-pagination-bullets {
+    top: 0 !important;
+  }
+
+  .swiper-pagination-bullet {
+    margin-top: 0.75rem !important;
+    bottom: 0 !important;
+    width: 1rem !important;
+    height: 1rem  !important;
+  }
+}
+
+.w-dynamic-screen {
+  width: 100vw;
+  width: 100dvw;
+}
+
+.h-dynamic-screen {
+  height: 100vh;
+  height: 100dvh;
 }
 
 .hero-gradient {
@@ -96,22 +118,6 @@
   background: linear-gradient(to bottom, rgba(0, 15, 38, 0) 0%, rgba(0, 15, 38, 1) 70%);
 }
 
-.modal {
-  height: 100vh;
-  height: 100dvh;
-  width: 100vw;
-  width: 100dvw;
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  backdrop-filter: blur(3px);
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 30;
-}
 
 .hamburger div {
   /* position: relative; */
@@ -129,7 +135,7 @@
 
 .active.hamburger .top-bun {
   transform: rotate(-45deg);
-  margin-top: 25px;
+  margin-top: 19.5px;
 }
 .active.hamburger .bottom-bun {
   opacity: 0;
@@ -189,16 +195,16 @@
 }
 
 .blue-dark-gradient {
-  background: #00143a; /* fallback for old browsers */
+  background: #000F26; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #00143a,
-    #000D26
+    #000F26,
+    #001a35
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #00143a,
-    #000D26
+    #000F26,
+    #001a35
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
